# yaer2-team-project

./: README.md  nginx.conf
Api Documentation/: .vault-stats  API Errors.md  Index.md  JWT.md
Api Documentation/api/: getnonce.md  login.md  menu.md  modifyorderitem.md  modifytableno.md  notify.md  order.md  orderstatus.md  refresh.md  register.md  rm-notif.md  tip.md  viewactiveorders.md  viewcustomerorders.md  vieworders.md
Api Documentation/rtos/: real-time-order.md
Jenkins Pipeline Scripts/: admin_console.groovy  backend.groovy  frontend.groovy  rtos.groovy
admin-console/: CMakeLists.txt  admin-console_en_GB.ts  format.sh  gen_valid.py  main.cpp  make_unix.sh  make_windows.sh  security.cpp  utils.cpp  utils.h
admin-console/model/: config_sql.cpp  configuration.cpp  configuration.h  inventoryitem.cpp  inventoryitem.h  inventorymenuitem.cpp  inventorymenuitem.h  menuitem.cpp  menuitem.h  menutype.cpp  menutype.h  user.cpp  user.h
admin-console/tests/: test.cpp  test.h  testing.cpp  testing.h
admin-console/ui/: .gitignore  addinvitemdialogue.cpp  addinvitemdialogue.h  addinvitemdialogue.ui  additemdialogue.cpp  additemdialogue.h  additemdialogue.ui  addmenutypedialogue.cpp  addmenutypedialogue.h  addmenutypedialogue.ui  adduserdialogue.cpp  adduserdialogue.h  adduserdialogue.ui  changepassworddialogue.cpp  changepassworddialogue.h  changepassworddialogue.ui  checkpassworddialogue.cpp  checkpassworddialogue.h  checkpassworddialogue.ui  editinventorymenu.cpp  editinventorymenu.h  editinventorymenu.ui  filteredlist.h  invitemtable.cpp  invitemtable.h  invmenuitemtable.cpp  invmenuitemtable.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuitemtable.cpp  menuitemtable.h  menutypetable.cpp  menutypetable.h  usertable.cpp  usertable.h
frontend/: .eslintrc.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.html  index.js
frontend/src/components/: App.js  ProtectedRoute.js
frontend/src/components/api/: ApiClient.js  TokenHandler.js
frontend/src/components/layout/: AuthLayout.js  DefaultLayout.js  KitchenLayout.js
frontend/src/components/menu/: FliterItems.js  FliterMenu.js  ItemType.js  Menu.js  MenuItem.js  OrderContextProvider.js  TypeMenu.js
frontend/src/components/notifications/: Notification.js  NotificationBox.js  NotificationContextProvider.js
frontend/src/components/pages/: Cart.js  CartItem.js  CustOrderCard.js  CustomerOrder.js  Dashboard.js  Login.js  NotifyWaiter.js  OrderItem.js  OrderSuccessful.js  Register.js  StaffOrders.js  ViewOrder.js  WaiterNotifications.js
frontend/src/components/staff/: NewOrders.js  OrderCard.js  StaffNavBar.js  WaiterNotification.js
frontend/src/components/ui/: BasketIndicator.js  Button.js  NavBar.js  SidebarPage.js  Sidemenu.js  TextField.js
java-backend/: .gitignore  create_db.sql  dummy_data.py  format.sh  jwt_secret_gen.c  pre_pipeline.py  settings.gradle  tables.py
java-backend/app/: build.gradle
java-backend/app/src/main/java/backend/: App.java
java-backend/app/src/main/java/backend/authentication/: NonceManager.java  UserManager.java
java-backend/app/src/main/java/backend/database/: DatabaseConnector.java  DatabaseRunnable.java
java-backend/app/src/main/java/backend/exceptions/: IllegalQuantityException.java  InvalidNonceException.java  InvalidOrderException.java  InvalidUserTypeException.java  LoginException.java  NonceIssueException.java  OrderFieldNotFoundException.java  OrderLineNotFoundException.java  OrderNotFoundException.java  OrderStatusNotFoundException.java  RegistrationException.java  UserNotFoundException.java  UserTypeNotFoundException.java
java-backend/app/src/main/java/backend/model/: MenuItem.java  MenuType.java  Notification.java  Order.java  OrderLine.java  OrderStatus.java  Tip.java  User.java  UserType.java
java-backend/app/src/main/java/backend/servlets/: DeleteNotificationServlet.java  GetMenuServlet.java  GetNonceServlet.java  HTTPServletOverride.java  LoginServlet.java  ModifyOrderItemServlet.java  ModifyOrderTableNoServlet.java  NotFoundServlet.java  NotificationServlet.java  OrderServlet.java  OrderStatusServlet.java  RefreshServlet.java  RegisterServlet.java  Router.java  TipServlet.java  ViewActiveOrders.java  ViewCustomerOrders.java  ViewOrders.java
java-backend/app/src/test/java/backend/: DatabaseConnectorTest.java  DevEnvTest.java  MenuItemTest.java  MenuTypeTest.java  NonceManagerTest.java  NotificationTest.java  OrderLineTest.java  OrderTest.java  SecureRandomBenchmarkTest.java  ServletTest.java  TestDevEnv.java  TestUtils.java  TipTest.java  UserManagerTest.java  UserTest.java
real-time-order/: .gitignore  format.sh  go.mod  go.sum  init_tests.py  log  main.go
real-time-order/db/: db.go  structs.go
real-time-order/model/: consts.go  menu_item.go  notifs.go  order_line.go
real-time-order/utils/: config.go  config_test.go  logging.go  security.go  security_test.go
